html.validator.nu check done

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <title>Erbakır Science High School</title>
+    <title>Erbakır Science High School Unofficial Website</title>
     <meta charset="utf-8">
 </head>
 <body>
@@ -10,7 +10,9 @@
         Erbakır Science High School
         <img src="https://upload.wikimedia.org/wikipedia/tr/8/83/Erbakır_Fen_Lisesi.jpg" alt="Resim yazısı" height="30" width="30">
     </h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/G3tpsgy8EVE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/G3tpsgy8EVE">
+    </iframe>
     <p>
         <i>
             The unofficial website of the school that sets the bar itself,
@@ -18,8 +20,9 @@
         </i>
     </p>
 
-    <h3><span style="color:blue">Connections</span></h3>
-    <ul>    <!--Unordered list-->
+    <h3 style="color:darkslateblue">Connections</h3>
+    <ul style="list-style-type:circle">
+        <!--Unordered list-->
         <li><a href="index_history.html">History/Accomplishments of the school</a></li>
         <li><a href="index_exam.html">Exam Dates/Times</a></li>
         <li><a href="index_kadro.html">Academic Staff</a></li>
