--- a/index_history.html
+++ b/index_history.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8">
 </head>
 <body>
-    <img src="kupalar.png" alt="Image cannot be opened" height="231" width="550">
-    <h3><span style="color:red">History/Accomplishment's of Erbakır Science High School</h3>
-    <ul type="circle">  <!--Unordered List with circle-->
+    <img src="kupalar.png" alt="Resim yazısı" height="231" width="550">
+    <h3 style="color:red">History/Accomplishment's of Erbakır Science High School</h3>
+    <ul style="list-style-type:square">  <!--Unordered List with circle-->
         <li>Erbakır Science High School gave its first graduates in 1999 after it started education.</li>
         <li>While our school prepared our 45 students for life in 1999, achieved <b>100%</b> success as a placement rate.</li>
         <li>
@@ -26,7 +26,7 @@
         <li>In 2013, our students won the <b>2nd</b> prize in the <i>Acıbadem University</i> project competition.</li>
         <li>The students of our school, which won the <i>Chess Provincial Championship</i> in 2013, came in <b>2nd</b> in the international tournament.</li>
     </ul>
-    <ul>
+    <ul style="list-style-type:circle">
         <li><a href="index_exam.html">Exam Dates/Times</a></li>
         <li><a href="index_kadro.html">Academic Staff</a></li>
         <li><a href="index.html">Return to the main page</a></li>
