--- a/index_kadro.html
+++ b/index_kadro.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <title>Academic Staff</title>
-    <meta charset="utf-32">
+        <title>Academic Stuff</title>
+        <meta charset="utf-8">
 </head>
 <body>
-    <h3><span style="color:red">Academic Staff in Erbakır Science High School</h3>
-    <dl><!--Definition List-->
+    <h3 style="color:red">Academic Staff in Erbakır Science High School</h3>
+    <dl>
+        <!--Definition List-->
         <dt><b>School Manager</b></dt>
         <dd>Seda Hilal NİŞANCI</dd>
-        <p></p>
-        <dt>Assistant School Manager</dt>
+
+        <dt><b>Assistant School Manager</b></dt>
         <dd>İzzet DALGIÇ</dd>
         <dd>Mustafa ÇAPAR</dd>
-        <p></p>
+
         <dt><b>Mathematic Teacher</b></dt>
         <dd>Coşkun TAŞÇI</dd>
         <dd>Mustafa AKBULUT</dd>
         <dd>Mehmet Ali TOPÇU</dd>
         <dd>Refika DUYAR</dd>
         <dd>Zübeyir ÇIRAK</dd>
-        <p></p>
+
         <dt><b>Physic Teacher</b></dt>
         <dd>Barış YILMAZ</dd>
         <dd>Özgür ÖZHAN</dd>
         <dd>Yücel GÖZEN</dd>
-        <p></p>
+
         <dt><b>Chemistry Teacher</b></dt>
         <dd>Ahmet GEVREK</dd>
         <dd>Yeşim DAĞDAŞ</dd>
         <dd>Mustafa KARAHACIOĞLU</dd>
-        <p></p>
+
         <dt><b>Biology Teacher</b></dt>
         <dd>Abdurrahman KANLIK</dd>
         <dd>Abtulkerim ÇANKAYA</dd>
         <dd>Hakan ZAMAN</dd>
         <dd>Nurşat ÇETİN</dd>
-        <p></p>
+
         <dt><b>History Teacher</b></dt>
         <dd>Korkmaz AYDIN</dd>
-        <p></p>
+
         <dt><b>Geography Teacher</b></dt>
         <dd>Birol ALTUNAY</dd>
-        <p></p>
+
         <dt><b>English Teacher</b></dt>
         <dd>Sibel SAVÇI</dd>
         <dd>Güneş ACAR</dd>
         <dd>Aysun KABAN</dd>
-        <p></p>
+
         <dt><b>German Teacher</b></dt>
         <dd>Nilgün SANDIKÇI</dd>
         <dd>Funda KAYA</dd>
-        <p></p>
+
         <dt><b>Philosophy Teacher</b></dt>
         <dd>Köksal AKSOY</dd>
-        <p></p>
+
         <dt><b>Turkish/Turkish Literature Teacher</b></dt>
         <dd>Ömer Faruk PEKUZ</dd>
         <dd>Pakize METİN</dd>
         <dd>Muhterem ALTINTEN</dd>
     </dl>
-    <li><a href="index_exam.html">Exam Dates/Times</a></li>
-    <li><a href="index_history.html">History/Accomplishments of the school</a></li>
-    <li><a href="index.html">Return to the main page</a></li>
+    <ul style="list-style-type:circle">
+        <li><a href="index_exam.html">Exam Dates/Times</a></li>
+        <li><a href="index_history.html">History/Accomplishments of the school</a></li>
+        <li><a href="index.html">Return to the main page</a></li>
+    </ul>
+
 </body>
 </html>
