--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <title>Erbakır Science High School</title>
+    <title>Erbakır Science High School Unofficial Website</title>
     <meta charset="utf-8">
 </head>
 <body>
     <h1>
         <img src="https://upload.wikimedia.org/wikipedia/tr/8/83/Erbakır_Fen_Lisesi.jpg" alt="Resim yazısı" height="30" width="30">
-        Erbakır Science High School
+        Erbakır Science High School Unofficial Website
         <img src="https://upload.wikimedia.org/wikipedia/tr/8/83/Erbakır_Fen_Lisesi.jpg" alt="Resim yazısı" height="30" width="30">
     </h1>
     <iframe width="560" height="315"
