--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <h1>
-        <img src="https://upload.wikimedia.org/wikipedia/tr/8/83/Erbakır_Fen_Lisesi.jpg" alt="Resim yazısı" height="30" width="30">
+        <img src="https://upload.wikimedia.org/wikipedia/tr/8/83/Erbakır_Fen_Lisesi.jpg" alt="Image cannot be opened" height="30" width="30">
         Erbakır Science High School Unofficial Website
-        <img src="https://upload.wikimedia.org/wikipedia/tr/8/83/Erbakır_Fen_Lisesi.jpg" alt="Resim yazısı" height="30" width="30">
+        <img src="https://upload.wikimedia.org/wikipedia/tr/8/83/Erbakır_Fen_Lisesi.jpg" alt="Image cannot be opened" height="30" width="30">
     </h1>
     <iframe width="560" height="315"
             src="https://www.youtube.com/embed/G3tpsgy8EVE">
@@ -31,3 +31,4 @@
     <p>Unofficial Page of EFL<p>
 </body>
 </html>
+
